Remove deprecated method/classes, work on #32